--- a/src/Components/MainComponents/MainComponentsCss.css
+++ b/src/Components/MainComponents/MainComponentsCss.css
@@ -402,6 +402,11 @@ h1{
     margin-bottom: 4rem;
 }
 
+#home-page-explore-more-container a{
+    text-decoration: none;
+    color: black;
+}
+
 #home-page-explore-more-container img{
     width: 10rem;
     border-radius: 50%;
