--- a/src/Components/RedirectedPages/RedirectedPagesCss.css
+++ b/src/Components/RedirectedPages/RedirectedPagesCss.css
@@ -888,3 +888,178 @@
 
 
 
+
+
+
+
+@media screen and (min-width: 320px) and (max-width: 600px) {
+
+
+#search-page{
+    width: 300%;
+}
+
+#search-page-i-want-to-make-container{
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+}
+
+#search-page-i-want-to-make-search-bar-and-text{
+    width: 66rem;
+}
+
+#search-page-i-want-to-make-search-bar-and-text h3{
+    margin-right: 2rem;
+    font-size: 3rem;
+}
+#search-page-i-want-to-make-container input[type=search]{
+    width: 35rem;
+    height: 5rem;
+    font-size: 3rem;
+    padding-left: 2rem;
+}
+
+#search-page-i-want-to-make-search-bar{
+    display: flex;
+    align-items: center;
+}
+
+#search-page-i-want-to-make-search-bar-search-icon{
+    font-size: 3rem;
+}
+
+#search-page-your-recent-searches{
+    color: white;
+    font-size: 2.5rem;
+    margin-bottom: 5rem;
+}
+
+#saved-page-header{
+    width: 300%;
+}
+
+#saved-page-header h2{
+    font-size: 6rem;
+}
+
+#saved-page-recipes {
+    width: 300%;
+}
+
+#saved-page-recipes-my-boards{
+    width: 300%;
+}
+
+#saved-page-recipes-my-boards a{
+    font-size: 4rem;
+}
+
+#discover-recipes-card {
+    width: 43%;
+}
+
+#saved-page-recipes-plus-icon {
+    font-size: 5rem;
+    margin-bottom: 2rem;
+}
+
+#discover-recipes-card h3 {
+    font-size: 4rem;
+    margin-bottom: 3rem;
+}
+
+#discover-recipes-card p {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+#discover-recipes-card a {
+    font-size: 3rem;
+}
+
+#added-recipes-card {
+    background-color: white;
+    text-align: left;
+    width: 13.5rem;
+    height: 20.75rem;
+    cursor: pointer;
+    margin-right: 2rem;
+    border-bottom: 4px solid aquamarine;
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+#added-recipes-card img:first-child {
+    width: 13.5rem;
+    height: 10rem;
+    border: 1px solid black;
+    margin-bottom: 2rem;
+}
+
+#added-recipes-card img:nth-child(2) {
+    width: 5rem;
+    height: 5rem;
+    border: 1px solid black;
+    border-radius: 50%;
+    position: absolute;
+    top: 7.5rem;
+    left: 1rem;
+}
+
+#added-recipes-card h3 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    margin-left: 1.5rem;
+}
+
+#added-recipes-card p {
+    margin-left: 1.5rem;
+}
+
+#saved-page-my-boards {
+    width: 300%;
+}
+
+#new-board-card {
+    width: 43%;
+}
+
+#saved-page-my-boards-plus-icon {
+    font-size: 5rem;
+    margin-bottom: 3rem;
+}
+
+#new-board-card h3 {
+    font-size: 4rem;
+    margin-bottom: 15rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
