--- a/src/Components/RedirectedPages/RedirectedPagesCss.css
+++ b/src/Components/RedirectedPages/RedirectedPagesCss.css
@@ -151,6 +151,25 @@
     border-bottom: 1px solid purple;
 }
 
+#saved-page-added-from-recipes{
+    width: 18%;
+    height: 21rem;
+    background-color: white;
+    border-bottom: 4px solid aquamarine;
+    margin-left: 2rem;
+}
+
+#saved-page-added-from-recipes h3{
+    margin-left: 1rem;
+    padding-right: 1rem;
+}
+
+#saved-page-added-from-recipes img{
+    width: 13.45rem;
+    height: 10rem;
+    margin-bottom: 2rem;
+}
+
 #added-recipes-card{
     background-color: white;
     text-align: left;
@@ -158,9 +177,9 @@
     height: 20.75rem;
     cursor: pointer;
     margin-right: 2rem;
+    margin-left: 2rem;
     border-bottom: 4px solid aquamarine;
     position: relative;
-    margin-bottom: 2rem;
 }
 
 #added-recipes-card img:first-child{
@@ -591,6 +610,11 @@
     height: 20rem;
 }
 
+#recipe-categories-page-recipes a {
+    text-decoration: none;
+    color: black;
+}
+
 #recipe-categories-page-text{
     background-color: white;
     width: 30rem;
@@ -609,6 +633,116 @@
     margin-top: 0.5rem;
 }
 
+
+/* RECIPE CATEGORIES DESCRIPTION PAGE */
+
+#recipe-categories-description-page-previous-next{
+    width: 100%;
+    height: 3rem;
+    background-color: #f5ce35;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#recipe-categories-description-page-previous-next h3{
+    display: flex;
+    align-items: center;
+}
+
+#recipe-categories-description-page-previous-icon{
+    margin-right: 0.5rem;
+}
+
+#recipe-categories-description-page-next-icon{
+    margin-left: 0.5rem;
+}
+
+#recipe-categories-description-page-container{
+    width: 60%;
+    margin-top: 2rem;
+    margin-left: 10rem;
+    margin-bottom: 5rem;
+}
+
+#recipe-categories-description-page-container h2{
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+}
+
+#recipe-categories-description-page-container h4{
+    margin-bottom: 2rem;
+}
+
+#recipe-categories-description-page-container-icons{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.3rem;
+}
+
+#recipe-categories-description-page-container-icons div{
+    width: 8rem;
+    height: 3rem;
+    background-color: rgb(243, 243, 243);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+}
+
+#recipe-categories-description-page-container-icons div:last-child{
+    width: 15rem;
+    padding:0 2rem;
+    background-color: #f5ce35;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#recipe-categories-description-page-container img{
+    width: 51rem;
+    height: 30rem;
+    margin-bottom: 2rem;
+}
+
+#recipe-categories-description-page-container p{
+    font-size: 1.2rem;
+    line-height: 3rem;
+}
+
+#recipe-categories-description-page-container h3{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+#recipe-categories-description-page-reviews h3{
+    font-size: 1.5rem;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+}
+
+#recipe-categories-description-page-reviews-header{
+    display: flex;
+    justify-content: space-between;
+}
+
+#recipe-categories-description-page-reviews-header-write-review h3{
+    cursor: pointer;
+    background-color: #f5ce35;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 15rem;
+}
+
+#recipe-categories-description-page-reviews-text{
+    border: 1px solid gainsboro;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+}
 
 
 
